Add branch protection bits
